@@ -20,12 +20,13 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id:$
+ *   $Id: m_kill.c,v 1.1 1999/07/31 04:48:03 db Exp $
  */
 #include "m_commands.h"
 #include "client.h"
 #include "ircd.h"
 #include "numeric.h"
+#include "s_log.h"
 #include "s_serv.h"
 #include "send.h"
 #include "whowas.h"
@@ -217,7 +218,7 @@ int m_kill(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 
 #if defined(USE_SYSLOG) && defined(SYSLOG_KILL)
   if (IsOper(sptr))
-    syslog(LOG_INFO,"KILL From %s For %s Path %s!%s",
+    log(L_INFO,"KILL From %s For %s Path %s!%s",
                         parv[0], acptr->name, inpath, path);
 #endif
   /*
