@@ -1,3 +1,7 @@
+*** 19990802_4 by lusky
+changed a syslog to log for Bleep
+
+
 *** 19990802_3 by lusky
 Updated documentation files, removed -DNDEBUG from the default CFLAGS,
 and sycn;d config.h.dist to config.h
